--- a/NotifyMe.Solution/NotifyMe/Pages/Shared/_Layout.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Pages/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
         <hr />
         <footer>
             
-            <p>&copy; 2018 - NotifyMe -- @ViewData["Version"]</p>
+            <p>&copy; 2018 - A simple PoC application to learn ASP.NET Core - Version: @ViewData["Version"]</p>
         </footer>
 }
     </div>
