--- a/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,14 +1,8 @@
 @inject SignInManager<IdentityUser> SignInManager
-@{
-    var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
-}
+
 <ul class="nav nav-pills nav-stacked">
     <li class="@ManageNavPages.IndexNavClass(ViewContext)"><a asp-page="./Index">Profile</a></li>
     <li class="@ManageNavPages.ChangePasswordNavClass(ViewContext)"><a id="change-password" asp-page="./ChangePassword">Password</a></li>
-    @if (hasExternalLogins)
-    {
-        <li class="@ManageNavPages.ExternalLoginsNavClass(ViewContext)"><a id="external-login" asp-page="./ExternalLogins">External logins</a></li>
-    }
     <li class="@ManageNavPages.PersonalDataNavClass(ViewContext)"><a asp-page="./PersonalData">Personal data</a></li>
-    <li class=""><a asp-page="./Identity/Account/Manage/AccessKeys">Access Keys</a></li>
+    <li class="@ManageNavPages.AccessKeysNavClass(ViewContext)"><a asp-page="./AccessKeys">Access Keys</a></li>
 </ul>
