--- a/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Manage/AccessKeys.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Manage/AccessKeys.cshtml
@@ -9,6 +9,10 @@
     <div class="col-md-6 center">
         <form id="url-form" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
+            <h4>Access Keys</h4>
+            <p>You are allowed to create access keys for 5 web sites. Access Keys are going to be auto generated for you.
+                In anytime you can revoke them or regenerate them.
+            </p>
             <div class="form-group">
                 <label>URL</label>
                 <input asp-for="URL" class="form-control" />
