--- a/NotifyMe.Solution/NotifyMe/Pages/Shared/_MenuPartial.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Pages/Shared/_MenuPartial.cshtml
@@ -10,7 +10,8 @@
 {
         <li><a asp-page="/Notifications"><span class="glyphicon glyphicon-bullhorn"></span> Notify</a></li>
         <li><a asp-page="/Templates"><span class="glyphicon glyphicon-file"></span> Templates</a></li>
-}
+        <li><a asp-page="/Chat"><span class="glyphicon glyphicon-file"></span> How to add?</a></li>
+}   
  
     </ul>
     @await Html.PartialAsync("_LoginPartial")
