--- a/NotifyMe.Solution/NotifyMe/Pages/Chat.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Pages/Chat.cshtml
@@ -22,14 +22,14 @@
     
 </p>
     <pre>
-        &lt;div id=&quot;container&quot; style=&quot;width: 400px;&quot;&gt;
+        &lt;div id=&quot;container&quot; &quot;&gt;
             &lt;chat ref=&quot;box&quot; access-key=&quot;{ACCESS KEY}&quot;&gt;&lt;/chat&gt;
         &lt;/div&gt;
 
-        &lt;script src=&quot;lib/signalr/signalr.min.js&quot;&gt;&lt;/script&gt;
+        &lt;script src=&quot;https://notifyminepla.azurewebsites.net/lib/signalr/signalr.min.js&quot;&gt;&lt;/script&gt;
         &lt;script src=&quot;https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js&quot;&gt;&lt;/script&gt;
         &lt;script src=&quot;https://cdn.jsdelivr.net/npm/vue&quot;&gt;&lt;/script&gt;
-        &lt;script src=&quot;js/component.js&quot;&gt;&lt;/script&gt;
+        &lt;script src=&quot;https://notifyminepla.azurewebsites.net/js/component.js&quot;&gt;&lt;/script&gt;
         &lt;script&gt;
             var component = new Vue({
                 el: '#container'
