--- a/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Areas/Identity/Pages/Account/Login.cshtml
@@ -55,7 +55,7 @@
                     
                 </form>   
             </section>
-            <div class="login100-more p-t-150 p-r-40 p-l-40">
+            <div class="login100-more p-t-150 p-r-40 p-l-90" style="background-image:url('/images/showcase.jpg');">
                 <div id="container" style="width: 400px;">
                     <chat ref="box" access-key="5DKZeomcebBrIQAKKXd79n4njerHaLRK"></chat>
                 </div>
