--- a/NotifyMe.Solution/NotifyMe/Pages/Chat.cshtml
+++ b/NotifyMe.Solution/NotifyMe/Pages/Chat.cshtml
@@ -16,11 +16,11 @@
 <link rel="stylesheet" type="text/css" href="~/css/chat.css">
 @if (SignInManager.IsSignedIn(User))
 {
-<h4>How to add chat box to your site</h4>
-<p>
-    It is very easy to add a chat box to your web site. Just use the following code snippet and that's it...
-    
-</p>
+    <h4>How to add chat box to your site</h4>
+    <p>
+        It is very easy to add a chat box to your web site. Just use the following code snippet and that's it...
+        Also don't forget to generate an Access Key and replace with {ACCESS KEY}
+    </p>
     <pre>
         &lt;div id=&quot;container&quot; &quot;&gt;
             &lt;chat ref=&quot;box&quot; access-key=&quot;{ACCESS KEY}&quot;&gt;&lt;/chat&gt;
